# my-scripts

./: README.md
c++/: nullorwhat.cpp  truthtable.cpp
c++/Unicodetest/: CMakeLists.txt  build.bat  build.sh  unicodeTest.cpp
c++/lz11-dec/: CMakeLists.txt
c++/lz11-dec/include/: lz.hpp
c++/lz11-dec/sources/: lz.cpp  main.cpp
c++/lz11-en/: CMakeLists.txt
c++/lz11-en/include/: lz.hpp
c++/lz11-en/sources/: lz.cpp  main.cpp
hexpat/: clim.hexpat  darc.hexpat
pihole/: myhosts
shell/files/: copyToWaydroidDCIM.sh
shell/music/: fix-dumb-sorter.sh  sort.sh
shell/video/: embed-subtitles.sh  extract-subtitles.sh  h26410bit-batch-seasons.sh  h26410bit-batch.sh  h26410bit.sh  software-h26410bit.sh
